# ftg-parser

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  rclone.conf  setup.cfg  setup.py
.github/workflows/: build-docker.yml
followthegrant/: __init__.py  cli.py  coi.py  db.py  dedupe.py  exceptions.py  ftm.py  identifiers.py  logging.py  mapping.yml  model.py  ner.py  settings.py  store.py  transform.py  util.py
followthegrant/dedupe/: authors.py
followthegrant/parse/: __init__.py  util.py  xml.py
followthegrant/worker/: __init__.py  base.py  tasks.py
ftg/: cli.py  coi.py  db.py  exceptions.py  extract_pubmed.py  flag_cois.py  ftm.py  get_fulltext_coi.py  logging.py  mapping.py  mapping.yml  model.py  ner.py  parse.py  psql.py  schema.py  settings.py  statements.py  store.py  util.py  worker.py
ftg/dedupe/: authors.py
ftg/load/: __init__.py  biorxiv.py  cord.py  crossref.py  europepmc.py  medrxiv.py  (+3 more)
ftgftm/: cli.py  extract_pubmed.py  flag_cois.py  get_fulltext_coi.py  split_coi.py
psql/: alter_system.sql  alter_system_local.sql  author_dedupe.sql  author_triples.sql  ftg_index.tmpl.sql  ftg_procedure.tmpl.sql  ftg_tables.tmpl.sql  statements.sql
rabbitmq.conf.d/: 10-defaults.conf
testdata/: author_triples.txt  medrxiv_cois.txt  pubmed_subset
tests/: test_biorxiv.py  test_cois.py  test_db.py  test_dedupe.py  test_ftm.py  test_loaders.py  test_medrxiv.py  test_model.py  test_ner.py  test_parsers.py  test_psql.py  test_pubmed.py  test_stateful_dedupe.py
(+6235 files in other folders)
