[metadata]
name = followthegrant
version = file: VERSION
description = Parser and tooling for Follow The Grant -> Follow The Money transformation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Simon Wörpel
author_email = simon.woerpel@medienrevolte.de,
url = https://gitlab.com/follow-the-grant/followthegrant-parser
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    Click
    banal
    countrytagger
    dateparser
    fingerprints
    followthemoney @ git+https://github.com/simonwoerpel/followthemoney.git@schema/science-identifiers  # noqa
    followthemoney-store
    ftm-columnstore
    html2text
    lxml
    ijson
    nomenklatura
    pandas
    pika==1.3.0
    pyicu
    pydantic
    spacy
    structlog
    shortuuid
    pyyaml
    pyparsing<3
    fasttext
    networkx
    ingest @ git+https://github.com/alephdata/ingest-file.git
    servicelayer
    zavod

[options.entry_points]
console_scripts =
    ftg = followthegrant.cli:cli

[mypy]
plugins = pydantic.mypy

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
